err/cocotb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cocotb'...
Listing './lib/python3.5/site-packages/cocotb/drivers'...
Compiling './lib/python3.5/site-packages/cocotb/drivers/ad9361.py'...
***   File "./lib/python3.5/site-packages/cocotb/drivers/ad9361.py", line 51
    print binaryRepresentation
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cocotb/generators'...
Listing './lib/python3.5/site-packages/cocotb/monitors'...
Listing './lib/python3.5/site-packages/cocotb-1.0.20170201.egg-info'...
Listing './lib/python3.5/site-packages/include'...
Listing './lib/python3.5/site-packages/lib'...
Listing './lib/python3.5/site-packages/lib/compat'...
Listing './lib/python3.5/site-packages/lib/embed'...
Listing './lib/python3.5/site-packages/lib/fli'...
Listing './lib/python3.5/site-packages/lib/gpi'...
Listing './lib/python3.5/site-packages/lib/gpi_log'...
Listing './lib/python3.5/site-packages/lib/simulator'...
Listing './lib/python3.5/site-packages/lib/utils'...
Listing './lib/python3.5/site-packages/lib/vhpi'...
Listing './lib/python3.5/site-packages/lib/vpi'...
Listing './lib/python3.5/site-packages/makefiles'...
Listing './lib/python3.5/site-packages/makefiles/simulators'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
